# algo

./: CMakeLists.txt  README.md  dependencies.cmake
cmake/: addTest.cmake
cmake/modules/: gtest.cmake
src/: palindrome_number.cpp  path_sum.cpp  remove_duplicates_from_sorted_array.cpp  validate_binary_search_tree.cpp
src/algo/include/: maximum_depth_of_binary_tree.h  palindrome_number.h  path_sum.h  remove_duplicates_from_sorted_array.h  symmetric_tree.h  validate_binary_search_tree.h
src/algo/include/data_structures/: tree_node.h
src/algo/src/: maximum_depth_of_binary_tree.cpp  palindrome_number.cpp  path_sum.cpp  remove_duplicates_from_sorted_array.cpp  symmetric_tree.cpp  validate_binary_search_tree.cpp
src/solutions/include/: palindrome_number.h  path_sum.h  remove_duplicates_from_sorted_array.h
src/solutions/src/: maximum_depth_of_binary_tree.cpp  palindrome_number.cpp  path_sum.cpp  remove_duplicates_from_sorted_array.cpp  validate_binary_search_tree.cpp
test/: CMakeLists.txt  test_maximum_depth_of_binary_tree.cpp  test_palindrome_number.cpp  test_path_sum.cpp  test_remove_duplicates_from_sorted_array.cpp  test_symmetric_tree.cpp  test_validate_binary_search_tree.cpp
